# MiniRenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  MiniEngine.sln  README.md  vcpkg.json
FileLoader/: CMakeLists.txt  FileLoader.vcxproj  FileLoader.vcxproj.filters  GLTFLoader.cpp  GLTFLoader.h  SimpleLoader.cpp  SimpleLoader.h
MiniEgineCore/: AgilitySDK.cpp  MiniEgineCore.vcxproj  MiniEgineCore.vcxproj.filters  MiniWindow.cpp  MiniWindow.h
MiniEngineCore/: AgilitySDK.cpp  CMakeLists.txt  EngineConfig.h  MiniEngineCore.vcxproj  MiniWindow.cpp  MiniWindow.h
RenderDX12/: CMakeLists.txt  D3DCamera.cpp  D3DCamera.h  D3DTimer.cpp  D3DTimer.h  D3DUtil.cpp  D3DUtil.h  DX12CommandList.cpp  DX12CommandList.h  DX12ConstantManager.cpp  DX12ConstantManager.h  DX12ConstantObjectManager.cpp  DX12ConstantObjectManager.h  DX12DDSManager.cpp  DX12DDSManager.h  DX12DescriptorHeap.cpp  DX12DescriptorHeap.h  DX12Device.cpp  DX12Device.h  DX12FrameBuffer.cpp  DX12FrameBuffer.h  DX12FrameResource.cpp  DX12FrameResource.h  DX12MaterialManager.cpp  DX12MaterialManager.h  DX12PSO.cpp  DX12PSO.h  DX12RenderGeometry.cpp  DX12RenderGeometry.h  DX12RenderItem.cpp  DX12RenderItem.h  DX12Resource.cpp  DX12Resource.h  DX12RootSignature.cpp  DX12RootSignature.h  DX12ShadowManager.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12TextureManager.cpp  DX12TextureManager.h  (+8 more)
Shaders/: Common.hlsl  Default.hlsl  GltfLightingUtil.hlsl  GltfShader.hlsl  color.hlsl
Shaders/tmpfolder/: Common.hlsl  Default.hlsl  LightingUtil.hlsl  Shadows.hlsl
scripts/: build.txt
